@@ -1,3 +1,12 @@
+2008-03-27  Jens Granseuer  <jensgr@gmx.net>
+
+	* file-transfer-dialog.c: (file_transfer_dialog_set_prop),
+	(file_transfer_dialog_get_prop), (file_transfer_dialog_init),
+	(file_transfer_job_update), (file_transfer_job_progress),
+	(file_transfer_dialog_overwrite), (file_transfer_job_schedule),
+	(file_transfer_dialog_copy_async):
+	* file-transfer-dialog.h: add support for file overwrite confirmation
+
 2008-03-11  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-apply.c: (gnome_meta_theme_set): actually check the
