@@ -1,5 +1,10 @@
 2008-03-27  Jens Granseuer  <jensgr@gmx.net>
 
+	* theme-installer.c: (gnome_theme_install_real): remove bogus flag
+	(gnome_theme_install_from_uri): update for internal API change
+
+2008-03-27  Jens Granseuer  <jensgr@gmx.net>
+
 	Patch by: Patrick Wade <patrick.wade@sun.com>
 
 	* appearance-themes.c: (custom_font_cb),
